--- a/modulo2/html-sistema-loja/template-loja/ctrl-estoque.html
+++ b/modulo2/html-sistema-loja/template-loja/ctrl-estoque.html
@@ -29,29 +29,29 @@
         </tr>
 
         <tr>
-            <td><img src="img/uno.jpg"width="500" alt="Uno Branco Gelo"/></td>
-            <td> Veiculo Uno </td>
+            <td><img src="img/uno.jpg"width="500" alt="uno"/></td>
+            <td> Carro que se por uma escada em cima vooa </td>
             <td> R$19.000 </td>
             <td> 8ud </td>
         </tr>
 
         <tr>
-            <td><img src="img/gol.jpg"width="500" alt="Gol Vermelho"/></td>
-            <td> Veiculo Gol </td>
+            <td><img src="img/gol.jpg"width="500" alt="gol"/></td>
+            <td> Carro que aguenta qualquer tranco </td>
             <td> R$12.000 </td>
             <td> 10ud </td>
         </tr>
 
         <tr>
-            <td><img src="img/santana.jpg"width="500" alt="Santana Cinza"/></td>
-            <td> Veiculo Santana </td>
+            <td><img src="img/santana.jpg"width="500" alt="santana"/></td>
+            <td> Santanão 4 portas completo</td>
             <td> R$17.000 </td>
             <td> 6ud </td>
         </tr>
 
         <tr>
-            <td><img src="img/palio.jpg"width="500" alt="Palio Branco"/></td>
-            <td> Veiculo Palio </td>
+            <td><img src="img/palio.jpg"width="500" alt="palio"/></td>
+            <td> Carro lindo, lindo  </td>
             <td> R$22.000</td>
             <td> 12ud </td>
         </tr>
