--- a/modulo2/html-sistema-loja/template-loja/funcionarios.html
+++ b/modulo2/html-sistema-loja/template-loja/funcionarios.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Funcionários</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <p>Rafhas Cars</p>
+        <p class="titulo1">Rafhas Cars</p>
     </header>
     
     <nav>
@@ -20,7 +21,7 @@
 
     <h2>Funcionários</h2>
     <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
-        <ol> 
+        <ul> 
             <li>Rafhael</li>
             <li>Ricardo</li>
             <li>Matheus</li>
@@ -28,6 +29,6 @@
             <li>Dito</li>
             <li>Jose Luiz</li>
 
-        </ol>
+        </ul>
 </body>
 </html>
