--- a/modulo2/html-sistema-loja/template-loja/index.html
+++ b/modulo2/html-sistema-loja/template-loja/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
+    <title>Rafhas Cars</title>
+    <link rel="stylesheet" href="style.css">
+
+
 </head>
 <body>
-    <header>
+    <div>
         <h1>Bem-vind@ ao <em>Rafhas Cars</em>!</h1>
         <p>Vem conferir a super promoção da semana</p>
-    </header>
+    </div>
 
     <nav>
         <a href="index.html">Página Inicial |</a>
@@ -26,9 +29,9 @@
     
     <footer>
         <p>Siga-nos nas redes sociais!</p>
-        <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-        <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-        <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+        <img src="./img/palio.jpg"/>
+        <img src="./img/gol.jpg"/>
+        <img src="./img/uno.jpg"/>
     </footer>
 </body>
 </html>
