--- a/modulo2/html-sistema-loja/template-loja/add-produto.html
+++ b/modulo2/html-sistema-loja/template-loja/add-produto.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adicionar Produto</title>
+    <link rel="stylesheet"  href="style.css">
+
 </head>
 <body>
     <header>
-        <p>Rafhas Cars</p>
+        <p class="titulo2">Rafhas Cars</p>
     </header>
     
     <nav>
@@ -21,6 +23,7 @@
     
     <h2>Adicionar Produto</h2>
     <form action="">
+        <div>
             <label for="link-foto">Link para foto: </label>
             <input type="url" id="link-foto" name="link-foto">
             <br>
@@ -41,6 +44,8 @@
             <br>
             <!-- Adicione ao type do botão abaixo o valor para que ele submeta o formulário -->
             <button type="submit">Adicionar</button>
+
+        </div>
 
     </form>
 
