--- a/modulo2/html-sistema-loja/template-loja/add-produto.html
+++ b/modulo2/html-sistema-loja/template-loja/add-produto.html
@@ -13,12 +13,12 @@
         <p class="titulo2">Rafhas Cars</p>
     </header>
     
-    <nav>
+    <div>
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
-    </nav>
+</div>
 
     
     <h2>Adicionar Produto</h2>
