--- a/modulo2/projeto-portifolio/index.html
+++ b/modulo2/projeto-portifolio/index.html
@@ -13,7 +13,7 @@
     <h1>Luiz Rafhael Piratelo Lorente</h1>
     <div>
         <!-- <p>Moro em Assis  ,Sp , tenho 35 anos, atualmete trabalho com Promoção de Merchandising na Deusa Alimentos, e estou fazendo um curso de Desenvolvimento Full Stack na Labenu.</p> -->
-        <td><img src="./índice.jpg" width="500" alt=""></td>
+        <td><img src="./índice-removebg-preview.png" width="400" alt=""></td>
 
     </div>
     <div>
