--- a/modulo2/projeto-portifolio/projeto.html
+++ b/modulo2/projeto-portifolio/projeto.html
@@ -11,8 +11,8 @@
     
 </body>
 </html>
-     <h2>Luiz RAfhael Piratelo Lorente</h2>
-<div>
+     <h2>Luiz Rafhael Piratelo Lorente</h2>
+<section>
      <h4>Quem sou eu - Meu nome é Luiz Rafhael Piratelo Lorente. Tenho 35 anos e moro em Assis , São Paulo.
         Comecei a fazer esse curso na Labenu, para que eu tenha a oportunidade de um dia poder trabalhar
         na are de programação.
@@ -21,4 +21,5 @@
         Pretendo um dia poder realizar meus sonhos e poder dar um futuro melhor ao meu filho.
      </h4>
         <a href="index.html"><button class="botao" > Voltar   </button></a>
- </div>
+</section>
+ 
