--- a/modulo2/projeto-portifolio/projeto.html
+++ b/modulo2/projeto-portifolio/projeto.html
@@ -8,18 +8,19 @@
     <title>Portifolio</title>
 </head>
 <body>
+   <h2>Luiz Rafhael Piratelo Lorente</h2>
+   <div class="conteiner"> 
+   <h4>Quem sou eu - Meu nome é Luiz Rafhael Piratelo Lorente. Tenho 35 anos e moro em Assis , São Paulo.
+     Comecei a fazer esse curso na Labenu, para que eu tenha a oportunidade de um dia poder trabalhar
+     na are de programação.
+     Quando tenho um tempo livre, gosto de assistir NBA,NFL,Futebol,ver filmes de comedia e a minha adoravel
+     academia que em si tem me ajudado e muito.
+     Pretendo um dia poder realizar meus sonhos e poder dar um futuro melhor ao meu filho.
+     <a href="index.html"><button class="botao" > Voltar   </button></a>
+  </h4>
     
+   </div>
 </body>
 </html>
-     <h2>Luiz Rafhael Piratelo Lorente</h2>
-<section>
-     <h4>Quem sou eu - Meu nome é Luiz Rafhael Piratelo Lorente. Tenho 35 anos e moro em Assis , São Paulo.
-        Comecei a fazer esse curso na Labenu, para que eu tenha a oportunidade de um dia poder trabalhar
-        na are de programação.
-        Quando tenho um tempo livre, gosto de assistir NBA,NFL,Futebol,ver filmes de comedia e a minha adoravel
-        academia que em si tem me ajudado e muito.
-        Pretendo um dia poder realizar meus sonhos e poder dar um futuro melhor ao meu filho.
-     </h4>
-        <a href="index.html"><button class="botao" > Voltar   </button></a>
-</section>
+     
  
